@startuml ExtendedRealEstateApplication
allow_mixing

title ER Diagram

entity "Buyer" as Buyer {
    * buyer_id : UUID
    --x
    name : String
    email : String
    phone : String
}

entity "Seller" as Seller {
    * seller_id : UUID
    --
    name : String
    email : String
    phone : String
}

entity "Admin" as Admin {
    * admin_id : UUID
    --
    name : String
    email : String
}

entity "Property" as Property {
    * property_id : UUID
    --
    address : String
    price : Decimal
    status : String
    seller_id : UUID
}

entity "Inquiry" as Inquiry {
    * inquiry_id : UUID
    --
    property_id : UUID
    buyer_id : UUID
    message : Text
    date : Date
    status : String
}

entity "Offer" as Offer {
    * offer_id : UUID
    --
    property_id : UUID
    buyer_id : UUID
    offer_amount : Decimal
    status : String
    date : Date
}

entity "VisitRequest" as VisitRequest {
    * visit_id : UUID
    --
    property_id : UUID
    buyer_id : UUID
    seller_id : UUID
    date : Date
    status : String
}

entity "ChatChannel" as ChatChannel {
    * channel_id : UUID
    --
    property_id : UUID
    buyer_id : UUID
    seller_id : UUID
    creation_date : DateTime
}

entity "Message" as Message {
    * message_id : UUID
    --
    channel_id : UUID
    sender_id : UUID
    receiver_id : UUID
    content : Text
    timestamp : DateTime
}

entity "PropertyDetails" as PropertyDetails {
    * details_id : UUID
    --
    property_id : UUID
    area : Integer
    num_bedrooms : Integer
    num_bathrooms : Integer
    description : Text
    amenities : String
}

entity "SearchHistory" as SearchHistory {
    * search_id : UUID
    --
    buyer_id : UUID
    search_terms : String
    filters : String
    timestamp : DateTime
}

entity "FilterCriteria" as FilterCriteria {
    * filter_id : UUID
    --
    price_range : String
    location : String
    num_bedrooms : Integer
    num_bathrooms : Integer
    amenities : String
}

' Relationships
Buyer "1" -- "0..*" Inquiry : makes >
Property "1" -- "0..*" Inquiry : receives >
Inquiry "1" -- "1" Buyer : from
Inquiry "1" -- "1" Property : for
Admin "1"-- "0..*" Property : verifys
Admin "1"-- "0..*" Buyer : Approves
Admin "1"-- "0..*" Seller : Approves

Buyer "1" -- "0..*" Offer : submits >
Property "1" -- "0..*" Offer : receives >
Offer "1" -- "1" Buyer : from
Offer "1" -- "1" Property : on

Buyer "1" -- "0..*" VisitRequest : requests >
Seller "1" -- "0..*" VisitRequest : receives >
Property "1" -- "0..*" VisitRequest : for >
VisitRequest "1" -- "1" Buyer : by
VisitRequest "1" -- "1" Seller : with
VisitRequest "1" -- "1" Property : for

Seller "1" -- "0..*" Property : owns >
Property "1" -- "1" Seller : owned by

Buyer "1" -- "0..*" ChatChannel : initiates >
Seller "1" -- "0..*" ChatChannel : participates in >
Property "1" -- "1" ChatChannel : associated with

ChatChannel "1" -- "0..*" Message : contains >
Message "1" -- "1" ChatChannel : belongs to

Buyer "1" -- "0..*" Message : sends >
Seller "1" -- "0..*" Message : receives >

Property "1" -- "1" PropertyDetails : has >
PropertyDetails "1" -- "1" Property : belongs to

Buyer "1" -- "0..*" SearchHistory : performs >
SearchHistory "1" -- "1" Buyer : by
SearchHistory "1" -- "0..*" FilterCriteria : with

@enduml
